spinner - style fixes & wrap component in React.memo

--- a/src/genericComponents/Spinner/style.scss
+++ b/src/genericComponents/Spinner/style.scss
@@ -3,16 +3,15 @@
 .lds-ring {
   display: inline-block;
   position: relative;
-  width: 64px;
-  height: 64px;
+  width: 72px;
+  height: 72px;
 }
 .lds-ring div {
   box-sizing: border-box;
   display: block;
   position: absolute;
-  width: 51px;
-  height: 51px;
-  margin: 5px;
+  width: 100%;
+  height: 100%;
   border: 5px solid $brand_primary_color;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
